--- a/html/adminpage.html
+++ b/html/adminpage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="jquery.js"></script>
+    <script src="jquery.min.js"></script>
     <script>
         $(function () {
             $("#includedContent").load("/html/mainMenu.html");
