--- a/html/order.html
+++ b/html/order.html
@@ -31,19 +31,19 @@
                             <label for="days">Choose a day:</label>
 
                             <select id="days" name="days" size=”7”>
-                                <option value="h">H</option>
-                                <option value="k">K</option>
-                                <option value="sze" selected>Sze</option>
-                                <option value="cs">Cs</option>
-                                <option value="p">P</option>
-                                <option value="szo" selected>Szo</option>
-                                <option value="v" selected>V</option>
+                                <option value="H">H</option>
+                                <option value="K">K</option>
+                                <option value="Sze">Sze</option>
+                                <option value="Cs">Cs</option>
+                                <option value="P">P</option>
+                                <option value="Szo">Szo</option>
+                                <option value="V">V</option>
                             </select>
-                            <input onclick="showDegree()" type="submit" value="Choose">
+                            <input onclick="showDegree()" type="button" value="Choose">
 
                         </form>
                         <div class="form-group">
-                            Expected degree: <span class="degree"> </span> C
+                            Expected degree: <span class="degree"> </span> °C
                         </div>
 
                         <script src="/js/reigi_main.js"></script>
