--- a/html/order.html
+++ b/html/order.html
@@ -26,11 +26,11 @@
             <div class="col-1"></div>
             <div class="col-10">
                 <div>
-                    <div>
-                        <form>
+                    <div >
+                        <form class="gift">
                             <label for="days">Choose a day:</label>
 
-                            <select id="days" name="days" size=”7”>
+                            <select id="days" name="days"  size=”7”>
                                 <option value="H">H</option>
                                 <option value="K">K</option>
                                 <option value="Sze">Sze</option>
@@ -39,12 +39,18 @@
                                 <option value="Szo">Szo</option>
                                 <option value="V">V</option>
                             </select>
-                            <input onclick="showDegree()" type="button" value="Choose">
+                            <input onclick="showDegree()" type="button" class="btn btn-primary btn-info" value="Choose">
 
                         </form>
-                        <div class="form-group">
+                        <div class="form-group gift">
                             Expected degree: <span class="degree"> </span> °C
                         </div>
+
+                        <div class="form-group gift">
+                            Daily gift based on degree: <span class="gift"> </span>
+                        </div>
+
+
 
                         <script src="/js/reigi_main.js"></script>
 
@@ -62,7 +68,7 @@
                         <div class="form-group row">
                             <label for="inputPassword3" class="col-sm-2 col-form-label">Address</label>
                             <div class="col-sm-10">
-                                <input   type="text" class="form-control" name="address">
+                                <input type="text" class="form-control" name="address">
                             </div>
                         </div>
                         <div class="form-group row">
@@ -80,7 +86,8 @@
                         </div>
                         <div class="form-group row">
                             <div class="col-sm-10">
-                                <button onclick="calcAmount()" type="button" class="btn btn-primary btn-info">Price</button>
+                                <button onclick="calcAmount()" type="button"
+                                    class="btn btn-primary btn-info">Price</button>
 
                                 Total cost: <span class="show-amount"> 0 </span> Ft
 
@@ -134,7 +141,8 @@
                         </div>
                         <div class="form-group row">
                             <div class="col-12">
-                                <button onclick="customerDataISValid()" id="orderButton" type="button" class="btn btn-block btn-primary">Order</button>
+                                <button onclick="customerDataISValid()" id="orderButton" type="button"
+                                    class="btn btn-block btn-primary">Order</button>
                             </div>
                         </div>
                     </form>
