--- a/html/mainMenu.html
+++ b/html/mainMenu.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <!-- <style>
-        button {            
-            color: red;            
-            text-decoration: navajowhite;            
-            font-weight: bold;            
+    <style>
+        a {            
+                       
+            font-weight: bold;  
+            color:white;          
         }
-    </style>  -->
+    </style>  
 
 
     <div class="container">
