--- a/html/menu.html
+++ b/html/menu.html
@@ -23,10 +23,10 @@
         <div class="row">
             <div class="col-1"></div>
             <div class="col-10">
-                <div>
+                <div >
                     
-                        <span class="facebook">
-                            For daily offers visit us on <a href="https://www.facebook.com/ciaomammaristorante/">facebook</a>!
+                        <span class="neSzivass">
+                            For daily offers visit us on <a class="facebook" href="https://www.facebook.com/ciaomammaristorante/">facebook</a>!
                         </span>
                     
                 </div>
